# ChessGameQt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Errors.hpp  Game.cpp  Game.hpp  README.md  cmake_install.cmake  main.cpp
.qt/: QtDeploySupport.cmake
button/: CleanButton.cpp  CleanButton.hpp  ExitButton.cpp  ExitButton.hpp  ReadButton.cpp  ReadButton.hpp  StartButton.cpp  StartButton.hpp
check/: Check.cpp  Check.hpp
chessBoard/: ChessBoard.cpp  ChessBoard.hpp  Move.hpp  Position.hpp  Tile.cpp  Tile.hpp
constant/: Color.hpp  Path.hpp
piece/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
position/: error.pos  test1.pos
